@@ -266,6 +266,14 @@ $_lang['on'] = 'On';
 $_lang['online'] = 'Online';
 $_lang['open'] = 'Open';
 $_lang['options'] = 'Options';
+$_lang['orm_attribute_add'] = 'Add Attribute';
+$_lang['orm_attribute_add_below'] = 'Add Attribute Below Here';
+$_lang['orm_attribute_remove'] = 'Remove Attribute';
+$_lang['orm_attribute_remove_confirm'] = 'Are you sure you want to remove this attribute? This is irreversible.';
+$_lang['orm_container_add'] = 'Add Container';
+$_lang['orm_container_add_below'] = 'Add Container Below Here';
+$_lang['orm_container_remove'] = 'Remove Container';
+$_lang['orm_container_remove_confirm'] = 'Are you sure you want to remove this container, and all attributes below it? This is irreversible.';
 $_lang['pagetitle'] = 'Resource\'s title';
 $_lang['page_title'] = 'Resource Title';
 $_lang['parameter'] = 'Parameter';
