@@ -4,6 +4,7 @@ development release, and is only shown to give an idea of what's currently in th
 
 MODx Revolution 2.0.0-pl ($LastChangedRevision$, $LastChangedDate$)
 ====================================
+- Added ability to add/remove attributes and containers to UI ORM trees, specifically in User extended and remote data
 - Added UI for editing extended User Profile data
 - [#MODX-2116] Fixed bug in depth search in modX::sanitize
 - [#MODX-1150] Changing class_key for a Resource now reloads the page to change editing area
